Add new TextSearch class for the new Search API